main logic done.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <title>Cytoscape.js initialisation</title>
         <script src="js/jquery.min.js"></script>
         <script src="js/cytoscape.min.js"></script>
+        <script src="js/utils.js"></script>
+        <script src="js/graph.js"></script>
+        <script src="js/disease.js"></script>
         <script src="js/main.js"></script>
     </head>
     <body>
