--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <head>
         <link href="css/style.css" rel="stylesheet" />
         <meta charset=utf-8 />
-        <title>Cytoscape.js initialisation</title>
+        <title>Disease Visualization</title>
+    </head>
+    <body>
+        <div id="cy"></div>
         <script src="js/jquery.min.js"></script>
         <script src="js/cytoscape.min.js"></script>
         <script src="js/utils.js"></script>
         <script src="js/graph.js"></script>
         <script src="js/disease.js"></script>
         <script src="js/main.js"></script>
-    </head>
-    <body>
-        <div id="cy"></div>
     </body>
 </html>
