--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
 
             <p><button id="reset">Reset Graph</button></p>
 
+            <div id="sir">
+                <div class="sir" id="sir-susceptible">Susceptible</div>
+                <div class="sir" id="sir-infected">Infected</div>
+                <div class="sir" id="sir-dead">Dead</div>
+            </div>
+
         </div>
         
         <script src="js/jquery.min.js"></script>
